Add manifest link to index.html

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             border-inline-start: 3px solid var(--primary); padding-inline-start: 8px; 
         }
     </style>
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
 
